--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
-    "motion": "^12.6.2",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.17"
