--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.0",
     "react": "^19.0.0",
